# ejtraderMT

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  deploy.sh  pylint.rc  pylintrc  pylintrcconda  requirements.txt  setup.py  test.py
.github/workflows/: greetings.yml  python-publish.yml
.github/workflows/scripts/: create_release.py
ejtraderMT/: __init__.py
ejtraderMT/api/: mql.py  platafrom.py
ejtraderMT/api/helpers/: fifoqueue.py  utils.py
ejtradermtrust/: Cargo.toml
ejtradermtrust/src/: connection.rs  main.rs
src/: lib.rs
test/: MultipleDataframe copy.py  MultipleDataframe.py  ShortMultipleDataframe.py  dicthistory.py  live.py  main.py  main2.py
