
[package]
name = "ejtradermtlib"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

[lib]
name = "ejtradermtlib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15", features = ["extension-module"] }
zmq = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
